--- a/MONGO.ipynb
+++ b/MONGO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9d168062",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "from pymongo import MongoClient\n",
     "\n",
-    "MONGO_URI = \"mongodb+srv://omarnouih:hBKLNoSlArxM4OP7@cluster0.jz4f90l.mongodb.net/?retryWrites=true&w=majority\"\n",
+    "MONGO_URI = \"mongodb://Yacin09:LBV2026+@atlas-sql-669652cef094e500b8eaee60-2eo4m.a.query.mongodb.net/?ssl=true&authSource=admin\"\n",
     "DB_NAME = \"ticketing_db\"\n",
     "\n",
     "EXCEL_TO_COLLECTION = {\n",
@@ -136,7 +136,7 @@
     "import pandas as pd\n",
     "from pymongo import MongoClient\n",
     "\n",
-    "MONGO_URI = \"mongodb+srv://omarnouih:hBKLNoSlArxM4OP7@cluster0.jz4f90l.mongodb.net/ticketing_db?retryWrites=true&w=majority\"\n",
+    "MONGO_URI = \"mongodb://Yacin09:LBV2026+@atlas-sql-669652cef094e500b8eaee60-2eo4m.a.query.mongodb.net/?ssl=true&authSource=admin\"\n",
     "DB_NAME = \"ticketing_db\"\n",
     "COLLECTION_NAME = \"tickets\"\n",
     "CSV_FILE = \"BAse Tickets.csv\"  \n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cbd6c1e0",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
     "from datetime import datetime\n",
     "\n",
     "# ====== CONFIG ======\n",
-    "MONGO_URI = \"mongodb+srv://omarnouih:hBKLNoSlArxM4OP7@cluster0.jz4f90l.mongodb.net/ticketing_db?retryWrites=true&w=majority\"\n",
+    "MONGO_URI = \"mongodb://Yacin09:LBV2026+@atlas-sql-669652cef094e500b8eaee60-2eo4m.a.query.mongodb.net/?ssl=true&authSource=admin\"\n",
     "DB_NAME = \"ticketing_db\"\n",
     "COLLECTION = \"tickets\"\n",
     "CSV_FILE = \"BAse Tickets.csv\"\n",
@@ -254,7 +254,6 @@
     "        mapped = HEADER_MAP.get(base_low, base_low)\n",
     "        cols.append(mapped)\n",
     "    df.columns = cols\n",
-    "\n",
     "    # 3) Ensure all expected columns exist\n",
     "    for col in EXPECTED:\n",
     "        if col not in df.columns:\n",
